--- a/resources/sass/_word.scss
+++ b/resources/sass/_word.scss
@@ -48,6 +48,7 @@
         font-size: 20pt;
         color: #AC3B61;
         padding-left: 50px;
+        word-break: break-all;
     }
 
     .delete-warning {
@@ -64,8 +65,9 @@
             top: 50%;
             left: 50%;
             margin-top: -50px;
-            margin-left: -200px;
-            min-width: 400px;
+            @media (max-width: 480px){
+                width: 100%;
+            }
             border: 1px solid #000;
             border-radius: 5px;
             background-color: #fff;
@@ -84,8 +86,9 @@
 
                 li {
                     display: inline;
-                    border: 1px dotted black;
-                    padding: 5px;
+                    border: 1px dashed black;
+                    padding: 5px 10px;
+                    background-color: #ffe8de;
 
                     &:last-child {
                         margin-left: 20px;
@@ -94,4 +97,7 @@
             }
         }
     }
+}
+.no-scroll {
+    overflow-y: hidden;
 }
